# OpenLocus-Lab

./: .env.local.example  .gitignore  Cargo.toml  README.md  openlocus-research-design.md
.github/workflows/: bea-fd1-failure-decomposition.yml  bea-fd2a-direct-fd1-objective-setwise-smoke.yml  bea-fd2a1-failure-attribution-replay.yml  bea-v04-p1-setwise-role-proxy-smoke.yml  bea-v04-p2-target-role-proxy-repair-smoke.yml  bea-v04-p3-support-complementarity-repair-smoke.yml  bea-v1-n1-frozen-p4-span-refiner-smoke.yml  bea-v1-n10en-difference-aware-ci-canary.yml  bea-v1-n10er-bounded-public-ci-score-guard-safety-probe.yml  bea-v1-n2-rank-pack-actionability-decomposition.yml  bea-v1-n3-extra-depth-merge-order-design-simulation.yml  bea-v1-p1-actionability-audit.yml  bea-v1-p2-candidate-availability-reach.yml  bea-v1-p3-constrained-retrieval-policy.yml  bea-v1-p4-latency-aware-retrieval-scheduler.yml  bea-v1-p4h-disjoint-scheduler-validation.yml  bea-v1-p4i-disjoint-denominator-reservoir-audit.yml  bea-v1-p4j-cross-source-reservoir-unlock-audit.yml  bea-v1-p4k-exact-overlap-resolution-locked-reservoir-audit.yml  bea-v1-p4l-locked-non-python-scheduler-validation.yml  bea0-budgeted-evidence-acquisition.yml  bea1-mechanism-ablation.yml  bea2-policy-v02.yml  bea3-anchor-span-latency.yml  bea4-external-scale-smoke.yml  bea5-frozen-policy-robustness.yml  c5-contextbench-method-matrix-scale-smoke.yml  c5-contextbench-method-matrix-smoke.yml  c5-contextbench-verified-performance-smoke.yml  c5-repoqa-bm25-retrieval-smoke.yml  c5-repoqa-method-matrix-scale-smoke.yml  c5-repoqa-method-matrix-smoke.yml  d5a2-heldout-feature-validation.yml  empirical-research.yml  f1b-retrieval-derived-utility-smoke.yml  f1c-cross-benchmark-retrieval-utility.yml  f1d-cross-benchmark-retrieval-robustness.yml  offline-cross-run-matrix.yml  real-provider-benchmark.yml  retrieval-benchmark.yml
artifacts/b10_runtime_feature_audit/: b10_runtime_feature_audit_report.json  balanced_policy_v1_benchmark_routed.algorithm.json
artifacts/b10b_runtime_shadow_replay/: b10b_runtime_shadow_replay_report.json  balanced_policy_v1_runtime_shadow_ambiguous_branch.algorithm.json
artifacts/b11_prospective_matrix/: b11_prospective_matrix_aggregate_report.json
artifacts/b11_prospective_validation/: b11_prospective_validation.algorithm.json  b11_prospective_validation_report.json
artifacts/b12_mechanism_decomposition/: b12_matrix_aggregate_report.json  b12_mechanism_decomposition.algorithm.json  b12_mechanism_decomposition_report.json  b12_public_aggregate_screen_report.json
artifacts/b13_dro_policy_search/: b13_dro_policy_search.algorithm.json  b13_dro_policy_search_report.json  b13_public_aggregate_feasibility_report.json
crates/openlocus-cli/: Cargo.toml
crates/openlocus-cli/src/: lib.rs  main.rs
crates/openlocus-context/: Cargo.toml
crates/openlocus-context/src/: lib.rs  plan.rs
crates/openlocus-index/: Cargo.toml
crates/openlocus-index/src/: lib.rs  manifest.rs  persistent.rs
crates/openlocus-provider/: Cargo.toml
crates/openlocus-provider/src/: dense_store.rs  lib.rs  openai.rs  provider.rs
crates/openlocus-repo/: Cargo.toml
crates/openlocus-repo/src/: lib.rs  read.rs  scan.rs
crates/openlocus-retrieval/: Cargo.toml
crates/openlocus-retrieval/src/: bm25_search.rs  lib.rs  regex_search.rs  rrf.rs  symbol_search.rs
docs/: ci-research-harness.md  current-research-conclusions.en.md  current-research-conclusions.md  current-research-conclusions.zh.md  final-research-report.md  p20-llm-large-scale.md  p21-g-cross-model-context-injection.md  p21-g-llm-rich-candidate-remote-smoke.md  p21-g-llm-rich-candidate.md  p21-g-llm-structured-output-remote-smoke.md  p21-quality-first-rich-context.md  p22-p23-policy-surface-r26-guard.md  p22-p23-policy-surface.md  p30-admission-model-v3.md  policy.example.toml  r16-quality-bakeoff.md  r17-router-guard.md  r19-large-guard-validation.md  r23-guard-sweep.md  r25-graph-dense-ablation.md  r28-promotion-candidate-report.json  r28-promotion-candidate-report.md  r30-baseline-freeze.md  r32-embedding-view-bakeoff.md  r34-r36-quiver-anchor-proto.md  real-provider-ci-large-scale.en.md  real-provider-ci-large-scale.zh.md  real-provider-ci-p2-smoke.md  real-provider-ci-scale-p8-p9.md  real-provider-p1-embedding-smoke.md  real-provider-p1-llm-smoke.md  real-provider-p1-research-log.md  real-provider-p3-quiver-readiness.md  real-provider-p3-research-log.md  real-provider-p4-research-log.md  real-provider-p5-research-log.md  real-provider-p6-replay-summary.md  research-log.md  research-summary.md
eval/: b10_runtime_feature_audit.py  b10b_runtime_shadow_replay.py  b11_matrix_combiner.py  b11_prospective_validation.py  b12_matrix_combiner.py  b12_mechanism_decomposition.py  b12_public_aggregate_screen.py  b13_dro_policy_search.py  b13_public_aggregate_feasibility_screen.py  b14_public_aggregate_feasibility_screen.py  b14_uncertainty_calibration.py  b15_context_pack_policy.py  b15_public_aggregate_prior_screen.py  b16_downstream_agent_evaluation.py  b16_public_aggregate_feasibility_screen.py  b16a_minimal_mock_agent_paired_run.py  b16b_less_separable_mock_paired_run.py  b16c_live_provider_paired_smoke.py  b16d_less_trivial_live_provider_paired_smoke.py  b16e_broader_live_provider_paired_smoke.py  b16f_bea_derived_context_pack_paired_smoke.py  b16g_context_pack_atom_ablation.py  b16h_file_choice_atom_ablation.py  b16i_target_support_conjunction.py  b16j_ambiguous_support_conjunction.py  b17_public_systems_diagnostic_screen.py  b17_quiver_systems_track.py  b18_ood_temporal_evaluation.py  b19_theoretical_synthesis.py  b3_rmc_quality_experiment.py  b4_b9_model_robust_evidence_conversion.py  b6_lite_interpretable_policy_search.py  b6b_combined_policy_search.py  b6c_frozen_candidates.json  b6c_frozen_policy_validation.py  b6d_cross_adapter_frozen_validation.py  b8_lite_medium_matrix_combiner.py  b9a_adapter_health_report.py  bea0_budgeted_evidence_acquisition.py  bea1_mechanism_ablation.py  (+402 more)
fixtures/: r2.jsonl  smoke.jsonl
scripts/: validate_docs_i18n.py
(+1377 files in other folders)
