[workspace]
members = [
    "crates/openlocus-cli",
    "crates/openlocus-context",
    "crates/openlocus-core",
  "crates/openlocus-derived",
  "crates/openlocus-graph",
  "crates/openlocus-repo",
  "crates/openlocus-retrieval",
  "crates/openlocus-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Youzini-afk/OpenLocus"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ignore = "0.4"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
walkdir = "2.5"
