[package]
name = "openlocus-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "openlocus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
openlocus-core = { path = "../openlocus-core" }
openlocus-repo = { path = "../openlocus-repo" }
openlocus-retrieval = { path = "../openlocus-retrieval" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
