[package]
name = "openlocus-context"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
openlocus-core = { path = "../openlocus-core" }
openlocus-graph = { path = "../openlocus-graph" }
openlocus-repo = { path = "../openlocus-repo" }
openlocus-retrieval = { path = "../openlocus-retrieval" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
