[package]
name = "openlocus-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
openlocus-core = { path = "../openlocus-core" }
openlocus-repo = { path = "../openlocus-repo" }
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
