[package]
name = "openlocus-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
openlocus-core = { path = "../openlocus-core" }
openlocus-repo = { path = "../openlocus-repo" }
openlocus-store = { path = "../openlocus-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
