[package]
name = "openlocus-repo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
ignore.workspace = true
openlocus-core = { path = "../openlocus-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true
