[package]
name = "openlocus-retrieval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
openlocus-core = { path = "../openlocus-core" }
openlocus-repo = { path = "../openlocus-repo" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tempfile.workspace = true
